syntax = "proto3";

package helloworld;

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc GetCustomers (Empty) returns (CustomerList) {}
}

message Empty {}

message Customer {
  int32 MusteriID = 1;
  string MusteriAdi = 2;
  string IletisimBilgisi = 3;
}

message CustomerList {
  repeated Customer customers = 1;
}
